<resources>
    <string name="app_name">Ticket To Ride</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Nav Drawer Open</string>
    <string name="drawer_closed">Nave Drawer Closed</string>
    <string name="player_hand">Your Train Cards: </string>
    <string name="player_stats">Your Stats: </string>
    <string name="none">None</string>
    <string name="return_cards_title">Which card would you like to return?</string>
    <string name="return_card">Return Card</string>
    <string name="points_left">Points: </string>
    <string name="trains_left">Trains left: </string>
    <string name="your_dest">Your Destinations</string>
    <string name="close_button">Close</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="draw_train">Draw Train Cards</string>
    <string name="draw_dests">Draw Destinations</string>
    <string name="lay_track">Lay Track</string>
    <string name="bank_cards">Cards in Bank: </string>
    <string name="demo">Demo</string>
    <string name="draw_train_card">Train Card Selection</string>
    <string name="wild_rule">If you select a wild, you will only receive one card.</string>
    <string name="take_card">Take Card</string>
    <string name="confirm_track">Confirm Track</string>
    <string name="confirm_cards">Confirm Cards</string>
    <string name="retry">Retry</string>
    <string name="player_name"><u>Player\nNames</u></string>
    <string name="built_train"><u>Built Train\nPoints</u></string>
    <string name="completed_dest"><u>Completed\nDestinations</u></string>
    <string name="incomplete_dest"><u>Incomplete\nDestinations</u></string>
    <string name="longest_continuous"><u>Longest\nContinuous\nTrain</u></string>
    <string name="total"><u>Total\nPoints</u></string>
    <string name="game_over"><u><b>Game Over</b></u></string>
    <string name="returnToMenu">Return To Menu</string>
    <string name="returning_dest">You can only return at most two destination cards.</string>


    <string-array name="nav_drawer_items_array">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
        <item>Item4</item>
    </string-array>
</resources>
