<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_draw_train"
        android:title="@string/draw_train"
        android:visible="true"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/menu_draw_dest"
        android:title="@string/draw_dests"
        android:visible="true"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/menu_lay_track"
        android:title="@string/lay_track"
        android:visible="true"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_chat"
        android:title="Chat Messages"
        android:visible="true"
        app:showAsAction="ifRoom|withText"/>
</menu>