<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />
    <LinearLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/buttons_column"
            android:layout_below="@id/my_toolbar"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_stats"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:id="@+id/your_stats"
                android:paddingTop="15dp">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/player_color"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_name"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_points"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player_trains_remaining"
                    android:textSize="15sp"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
            <View style="@style/Divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal"
                android:id="@+id/player_hand">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_hand"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp">
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/red_card_num"
                    android:background="@color/card_red"
                    android:textColor="@color/black"
                    />
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/orange_card_num"
                    android:background="@color/card_orange"
                    android:textColor="@color/black"
                    />
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/yellow_card_num"
                    android:background="@color/card_yellow"
                    android:textColor="@color/black"
                    />
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/green_card_num"
                    android:background="@color/card_green"
                    android:textColor="@color/black"
                    />
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/blue_card_num"
                    android:background="@color/card_blue"
                    android:textColor="@color/white"
                    />
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/pink_card_num"
                    android:background="@color/card_pink"
                    android:textColor="@color/black"
                    />
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/white_card_num"
                    android:background="@color/card_white"
                    android:textColor="@color/black"
                    />
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/black_card_num"
                    android:background="@color/card_black"
                    android:textColor="@color/white"
                    />
                <TextView
                    style="@style/HandCards"

                    android:id="@+id/wild_card_num"
                    android:background="@drawable/wild"
                    android:textColor="@color/card_black"
                   />
            </LinearLayout>
            <View style="@style/Divider"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_cards"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:id="@+id/card_bank">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:id="@+id/card_slot_0"
                    android:layout_marginStart="20dp" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:id="@+id/card_slot_1"
                    android:layout_marginStart="20dp" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:id="@+id/card_slot_2"
                    android:layout_marginStart="20dp" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:id="@+id/card_slot_3"
                    android:layout_marginStart="20dp" />
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:id="@+id/card_slot_4"
                    android:layout_marginStart="20dp" />
            </LinearLayout>
            <View style="@style/Divider"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dest_button"
                    android:text="@string/your_dest"/>
            <View style="@style/Divider"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/leaderboard_button"
                    android:text="@string/leaderboard"/>
            <View style="@style/Divider"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/demo_button"
                android:text="@string/demo"/>
            <View style="@style/Divider"/>



        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/map_image"
            android:layout_toRightOf="@+id/buttons_column"
            android:layout_below="@id/my_toolbar"
            />

</RelativeLayout>